feat: add sound effects

--- a/nonograms/index.html
+++ b/nonograms/index.html
@@ -1,9 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nonograms</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./img/favicon-16x16.png"
+    />
     <link href="style.css" rel="stylesheet" />
   </head>
   <body class="body"></body>
