--- a/nonograms/index.html
+++ b/nonograms/index.html
@@ -4,14 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nonograms</title>
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="./img/favicon-16x16.png"
-    />
+    <link rel="icon" href="./img/favicon-16x16.png" />
     <link href="style.css" rel="stylesheet" />
   </head>
-  <body class="body"></body>
+  <body class="body" data-theme="light"></body>
   <script type="module" src="./js/index.js"></script>
 </html>
